--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Run ansible-lint
         uses: ansible/ansible-lint@main # or version tag instead of 'main'
         with:
-          requirements_file: ansible/requirements.yml
+          requirements_file: requirements.yml
