--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -20,3 +20,9 @@
     autoremove: yes
     autoclean: yes
   become: true
+
+- name: Resurrect pm2 after reboot if pm2 is installed
+  ansible.builtin.shell: pm2 resurrect
+  args:
+    executable: /bin/zsh
+  when: reboot_required_file.stat.exists and ansible_local.pm2 is defined
