--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -17,8 +17,8 @@
 
 - name: Remove dependencies that are no longer required.
   ansible.builtin.apt:
-    autoremove: yes
-    autoclean: yes
+    autoremove: true
+    autoclean: true
   become: true
 
 - name: Resurrect pm2 after reboot if pm2 is installed
