--- a/projects/software/install_user_softwares.yml
+++ b/projects/software/install_user_softwares.yml
@@ -1,16 +1,16 @@
 ---
 - name: Install user softwares
-   # https://stackoverflow.com/a/36361222/13172236
+  # https://stackoverflow.com/a/36361222/13172236
   hosts: "{{ setupHosts }}"
   vars:
     run_install: true
     run_upgrade: false
   vars_prompt:
-    - name: "setupHosts"
-      prompt: "Which hosts would you like to use?"
+    - name: setupHosts
+      prompt: Which hosts would you like to use?
       private: false
   tasks:
-    - shell: echo
+    - ansible.builtin.command: echo
   roles:
     - zsh
     - nvm_node_pm2
