--- a/projects/ubuntu_server_setup/ubuntu_server_setup.yml
+++ b/projects/ubuntu_server_setup/ubuntu_server_setup.yml
@@ -2,10 +2,10 @@
 # https://github.com/spinupwp/wordpress-ansible
 - name: Ubuntu Server Setup
   # https://stackoverflow.com/a/36361222/13172236
-  hosts: '{{ setupHosts }}'
+  hosts: "{{ setupHosts }}"
   vars_prompt:
-    - name: 'setupHosts'
-      prompt: 'Which hosts would you like to use?'
+    - name: setupHosts
+      prompt: Which hosts would you like to use?
       private: false
   become: true
   vars:
