--- a/projects/software/install_user_softwares.yml
+++ b/projects/software/install_user_softwares.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install user softwares
   # https://stackoverflow.com/a/36361222/13172236
-  hosts: "{{ setupHosts }}"
+  hosts: '{{ setupHosts }}'
   vars:
     run_install: true
     run_upgrade: false
