--- a/projects/software/roles/nvm_node_pm2/tasks/install.yml
+++ b/projects/software/roles/nvm_node_pm2/tasks/install.yml
@@ -5,10 +5,15 @@
 #     dest: "{{ ansible_env.HOME}}/.nvm/nvm.sh"
 
 ---
+# https://gist.github.com/komuw/b3b5d24977d4df7bd549?permalink_comment_id=2790242#gistcomment-2790242
 - name: Install nvm
   ansible.builtin.shell:
-    creates: /home/{{
-    cmd: curl https://raw.githubusercontent.com/creationix/nvm/v0.7.0/install.sh | sh ansible_user_id }}/.nvm/nvm.sh
+  args:
+    cmd: curl https://raw.githubusercontent.com/creationix/nvm/v0.7.0/install.sh | bash
+    executable: /bin/bash
+    chdir: '{{ ansible_env.HOME }}'
+    creates: '{{ ansible_env.HOME }}/.nvm/nvm.sh'
+
 - name: Source NVM script and install Node.js
   ansible.builtin.shell: |
     source ~/.nvm/nvm.sh &&
@@ -18,10 +23,11 @@
 
 - name: Include task to find node path (before first npm task)
   ansible.builtin.include_tasks: find_current_npm_executable.yml
+
 - name: Install PM2
   community.general.npm:
     name: pm2
     global: true
-    executable: "{{ npm_path }}"
+    executable: '{{ npm_path }}'
   environment:
-    PATH: "{{ node_dir }}:{{ ansible_env.PATH }}"
+    PATH: '{{ node_dir }}:{{ ansible_env.PATH }}'
