--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -13,6 +13,7 @@
 
 - name: Reboot if required
   ansible.builtin.reboot:
+  become: true
   when: reboot_required_file.stat.exists
 
 - name: Remove dependencies that are no longer required.
