--- a/projects/common/update_reboot_check.yml
+++ b/projects/common/update_reboot_check.yml
@@ -1,5 +1,5 @@
 ---
-- name: Apt update packages and reboot if required
+- name: Update packages and reboot if required
   # https://stackoverflow.com/a/36361222/13172236
   hosts: '{{ setupHosts }}'
   vars_prompt:
