Ubuntu Server Setup README

--- a/projects/ubuntu_server_setup/ubuntu_server_setup.yml
+++ b/projects/ubuntu_server_setup/ubuntu_server_setup.yml
@@ -2,13 +2,19 @@
 # https://github.com/spinupwp/wordpress-ansible
 - name: Ubuntu Server Setup
   # https://stackoverflow.com/a/36361222/13172236
-  hosts: "{{ setupHosts }}"
+  hosts: '{{ setupHosts }}'
   vars_prompt:
     - name: setupHosts
       prompt: Which hosts would you like to use?
       private: false
+  # Important as for a first install we will shh into the server as root
+  #  which will be deactivated after the first run
+  # become_user: {{ username | default('root') }}
+  # become_user: root
   become: true
   vars:
+    username: '{{ username }}'
+    password: '{{ password }}'
     run_install: true
     run_setup: false
   roles:
