Ansible Lint fixes 06-05-2025

--- a/projects/common/update_reboot_check.yml
+++ b/projects/common/update_reboot_check.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update packages and reboot if required
   # https://stackoverflow.com/a/36361222/13172236
-  hosts: '{{ setupHosts }}'
+  hosts: "{{ setupHosts }}"
   vars_prompt:
     - name: setupHosts
       prompt: Which hosts would you like to use?
