--- a/projects/monitoring/roles/monitoring/tasks/server_metrics.yml
+++ b/projects/monitoring/roles/monitoring/tasks/server_metrics.yml
@@ -17,7 +17,7 @@
   register: ram_usage
 
 - name: Get top 5 memory-consuming processes
-  shell: ps aux --sort=-%mem | awk 'NR<=6{print $1, $2, $3, $4, $11}'
+  ansible.builtin.shell: ps aux --sort=-%mem | awk 'NR<=6{print $1, $2, $3, $4, $11}'
   register: memory_top_processes
 
 - name: Gather Disk Space
@@ -34,21 +34,21 @@
   ignore_errors: true
 
 - name: Check swap usage
-  shell: 'swapon --show | tail -n +2'
+  ansible.builtin.shell: swapon --show | tail -n +2
   register: swap_usage
 
 - name: Display swap usage
-  debug:
-    msg: '{{ swap_usage.stdout_lines }}'
+  ansible.builtin.debug:
+    msg: "{{ swap_usage.stdout_lines }}"
 
 - name: Display System Metrics
   ansible.builtin.debug:
     msg:
-      - 'Executed On: {{ ansible_date_time.date }} {{ ansible_date_time.hour }}:{{ ansible_date_time.minute }}'
-      - 'CPU Usage: {{ cpu_usage.stdout }}%'
-      - 'RAM Usage: {{ ram_usage.stdout }}%'
-      - 'Disk Space Used: {{ disk_space.stdout }}'
-      - 'Load Average: {{ load_average.stdout }}'
-      - 'Swap Usage: {{ swap_usage.stdout }}%'
-      - 'Top 5 Memory-Consuming Processes:'
-      - '{{ memory_top_processes.stdout_lines }}'
+      - "Executed On: {{ ansible_date_time.date }} {{ ansible_date_time.hour }}:{{ ansible_date_time.minute }}"
+      - "CPU Usage: {{ cpu_usage.stdout }}%"
+      - "RAM Usage: {{ ram_usage.stdout }}%"
+      - "Disk Space Used: {{ disk_space.stdout }}"
+      - "Load Average: {{ load_average.stdout }}"
+      - "Swap Usage: {{ swap_usage.stdout }}%"
+      - "Top 5 Memory-Consuming Processes:"
+      - "{{ memory_top_processes.stdout_lines }}"
