--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,6 +6,9 @@
     cache_valid_time: 300
   become: true
 
+- name: Remove local cache
+  ansible.builtin.import_tasks: remove_cache.yml
+
 - name: Check if reboot required
   ansible.builtin.stat:
     path: /var/run/reboot-required
@@ -21,6 +24,15 @@
     autoremove: true
     autoclean: true
   become: true
+
+- name: Distribution
+  debug: msg="{{ ansible_distribution }}"
+
+- name: Distribution version
+  debug: msg="{{ ansible_distribution_version}}"
+
+- name: Distribution major version
+  debug: msg="{{ ansible_distribution_major_version }}"
 
 - name: Resurrect pm2 after reboot if pm2 is installed
   ansible.builtin.shell: pm2 resurrect
