Fixes pipefail attempts

--- a/projects/software/roles/zellij/tasks/install_zellij.yml
+++ b/projects/software/roles/zellij/tasks/install_zellij.yml
@@ -6,19 +6,25 @@
 
 ---
 - name: Fetch the latest Zellij release
-  ansible.builtin.shell: >
+  ansible.builtin.shell: |
+    set -o pipefail
     curl -s https://api.github.com/repos/zellij-org/zellij/releases/latest |
     grep "browser_download_url.*x86_64-unknown-linux-musl.tar.gz" |
     cut -d '"' -f 4 |
     wget -i -
+  args:
+    executable: /bin/bash
+
 - name: Extract the archive
   ansible.builtin.shell: |
+    set -o pipefail
     tar -xzf zellij-x86_64-unknown-linux-musl.tar.gz
   args:
     executable: /bin/bash
 
 - name: Move the binary to /usr/local/bin
   ansible.builtin.shell: |
+    set -o pipefail
     sudo mv zellij /usr/local/bin/
   args:
     executable: /bin/bash
@@ -26,7 +32,10 @@
 
 - name: Clean up
   ansible.builtin.shell: |
+    set -o pipefail
     rm zellij-x86_64-unknown-linux-musl.tar.gz
+
 - name: Verify installation
   ansible.builtin.shell: |
+    set -o pipefail
     zellij --version
