--- a/roles/nginx/tasks/setup_server_block.yml
+++ b/roles/nginx/tasks/setup_server_block.yml
@@ -29,6 +29,7 @@
 - name: Test Nginx configuration
   ansible.builtin.command: nginx -t
   notify: Restart nginx
+  changed_when: false
 
 - name: Obtain SSL certificate with Certbot
   ansible.builtin.apt:
